Fix contrast issue in header

--- a/src/_components/shortcodes/pagehero/pagehero.css
+++ b/src/_components/shortcodes/pagehero/pagehero.css
@@ -106,6 +106,12 @@
   padding-block-end: 0;
 }
 
+.hero-content a:hover,
+.hero-content a:focus {
+    background-color: transparent;
+    text-decoration: underline;
+}
+
 .hero--single-blog .hero-graphic::after,
 .hero--single-blog .hero-graphic,
 .hero--single-blog .hero-content {
